# SyobonAction

./: .gitignore  CMakeLists.txt  DxDirectX.h  DxLib.h  Makefile  README.ja.txt  README.md  build-vc6.bat  loadg.cpp  main.cpp  main.h  vc6-patch.bat
.github/workflows/: try-build.yml
src/: loadg.cpp  main.cpp  main.h  resource.rc
